feat: добавлена кнопка перезапуска для декстопной версии

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="content-wrapper">
     <div class="words-wrapper">
       <div class="info-icon"><img src="./icons/info.svg" alt="Справка" onclick="infoIconClick()"></div>
+      <div class="reload-icon"><img src="./icons/reload.svg" alt="Справка" onclick="reloadClick()"></div>
       <div id="info" class="info hidden-info">
         <p>Цель игры - за 6 попыток угадать слово. Буквы могут повторяться.</p>
         <p>Введите слово, нажмите Enter. Буквы поменяют цвет.</p>
