--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div class="info-icon"><img src="./icons/info.svg" alt="Справка" onclick="infoIconClick()"></div>
       <div id="reload" class="reload-icon hidden-icon"><img src="./icons/reload.svg" alt="Справка"
           onclick="reloadClick()"></div>
-      <div id="Enter" class="mobile-enter" onclick="handleTouch('', 'Enter')">Enter</div>
+      <div id="Enter" class="enter-icon" onclick="handleTouch('', 'Enter')"><img src="./icons/enter.svg" alt="Enter">
+      </div>
       <div id="info" class="info hidden-info">
         <p>Цель игры - за 6 попыток угадать слово. Буквы могут повторяться.</p>
         <p>Введите слово, нажмите Enter. Буквы поменяют цвет.</p>
