fix: исправлено изменение высоты контента при перезапуске

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
           <p>Отсутствующая буква подсвечена не будет.</p>
           <p>На клавиатуре внизу будут отображаться все введённые буквы по тем же правилам.</p>
           <p>Если слово подсвечено красным, то его нет в базе, либо оно уже было введено ранее. В счёт попыток такое
-            слово
-            не входит.</p>
+            слово не входит.</p>
         </div>
         <div class="word word-1 word-active">
           <div class="char char-1"></div>
@@ -73,8 +72,8 @@
         </div>
       </div>
     </div>
-    <div id="it-was-word"></div>
     <div class="keyboard">
+      <div id="it-was-word"></div>
       <div class="letter-row">
         <div id="Key1049" class="letter" onclick='handleTouch("й")'>Й</div>
         <div id="Key1062" class="letter" onclick='handleTouch("ц")'>Ц</div>
