feat: убрана кнопка "Enter", проверка слова осуществялется сразу после ввода 5ой буквы

--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
         <div id="info-icon" class="info-icon"><img src="./icons/info.svg" alt="Справка" onclick="infoIconClick()"></div>
         <div id="reload" class="reload-icon hidden-icon"><img src="./icons/reload.svg" alt="Справка"
             onclick="reloadClick()"></div>
-        <div id="enter" class="enter-icon" onclick="handleTouch('', 'Enter')"><img src="./icons/enter.svg" alt="Enter">
-        </div>
         <div id="info" class="info hidden-info">
           <p>Цель игры - за 6 попыток угадать слово. Буквы могут повторяться, а вместо "ё" везде используется "е".</p>
-          <p>Введите слово, нажмите Enter. Буквы поменяют цвет.</p>
+          <p>После ввода слова буквы поменяют цвет.</p>
           <p>Если буква находится на верной позиции, она будет окрашена в зелёный.</p>
           <p>Буква присутствует в слове, но на другой позиции – жёлтый цвет.</p>
           <p>Отсутствующая буква подсвечена не будет.</p>
