--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p>После ввода слова буквы поменяют цвет.</p>
           <p>Если буква находится на верной позиции, она будет окрашена в зелёный.</p>
           <p>Буква присутствует в слове, но на другой позиции – жёлтый цвет.</p>
-          <p>Отсутствующая буква подсвечена не будет.</p>
+          <p>Отсутствующая буква будет подсвечена белым.</p>
           <p>На клавиатуре внизу будут отображаться все введённые буквы по тем же правилам.</p>
           <p>Если слово подсвечено красным, то его нет в базе, либо оно уже было введено ранее. В счёт попыток такое
             слово не входит.</p>
