--- a/index.html
+++ b/index.html
@@ -15,60 +15,64 @@
 <body>
   <div class="content-wrapper">
     <div class="words-wrapper">
-      <div id="info-icon" class="info-icon"><img src="./icons/info.svg" alt="Справка" onclick="infoIconClick()"></div>
-      <div id="reload" class="reload-icon hidden-icon"><img src="./icons/reload.svg" alt="Справка"
-          onclick="reloadClick()"></div>
-      <div id="info" class="info hidden-info">
-        <p>Цель игры - за 6 попыток угадать слово. Буквы могут повторяться, а вместо "ё" везде используется "е".</p>
-        <p>После ввода слова буквы поменяют цвет.</p>
-        <p>Если буква находится на верной позиции, она будет окрашена в зелёный.</p>
-        <p>Буква присутствует в слове, но на другой позиции – жёлтый цвет.</p>
-        <p>Отсутствующая буква будет подсвечена белым.</p>
-        <p>На клавиатуре внизу будут выделяться все введённые буквы.</p>
-        <p>Если слово подсвечено красным, то его нет в базе, либо оно уже было введено ранее. В счёт попыток такое
-          слово не входит.</p>
-      </div>
-      <div class="word word-1 word-active">
-        <div class="char char-1"> </div>
-        <div class="char char-2"> </div>
-        <div class="char char-3"> </div>
-        <div class="char char-4"> </div>
-        <div class="char char-5"> </div>
-      </div>
-      <div class="word word-2">
-        <div class="char char-1"> </div>
-        <div class="char char-2"> </div>
-        <div class="char char-3"> </div>
-        <div class="char char-4"> </div>
-        <div class="char char-5"> </div>
-      </div>
-      <div class="word word-3">
-        <div class="char char-1"> </div>
-        <div class="char char-2"> </div>
-        <div class="char char-3"> </div>
-        <div class="char char-4"> </div>
-        <div class="char char-5"> </div>
-      </div>
-      <div class="word word-4">
-        <div class="char char-1"> </div>
-        <div class="char char-2"> </div>
-        <div class="char char-3"> </div>
-        <div class="char char-4"> </div>
-        <div class="char char-5"> </div>
-      </div>
-      <div class="word word-5">
-        <div class="char char-1"> </div>
-        <div class="char char-2"> </div>
-        <div class="char char-3"> </div>
-        <div class="char char-4"> </div>
-        <div class="char char-5"> </div>
-      </div>
-      <div class="word word-6">
-        <div class="char char-1"> </div>
-        <div class="char char-2"> </div>
-        <div class="char char-3"> </div>
-        <div class="char char-4"> </div>
-        <div class="char char-5"> </div>
+      <div class="icons-bg"></div>
+      <div class="words-container">
+        <div id="info-icon" class="info-icon"><img src="./icons/info.svg" alt="Справка" onclick="infoIconClick()"></div>
+        <div class="logo"><img src="./icons/logo.svg" alt="Logo"></div>
+        <div id="reload" class="reload-icon hidden-icon"><img src="./icons/reload.svg" alt="Справка"
+            onclick="reloadClick()"></div>
+        <div id="info" class="info hidden-info">
+          <p>Цель игры - за 6 попыток угадать слово. Буквы могут повторяться, а вместо "ё" везде используется "е".</p>
+          <p>После ввода слова буквы поменяют цвет.</p>
+          <p>Если буква находится на верной позиции, она будет окрашена в зелёный.</p>
+          <p>Буква присутствует в слове, но на другой позиции – жёлтый цвет.</p>
+          <p>Отсутствующая буква будет подсвечена серым.</p>
+          <p>На клавиатуре внизу будут выделяться все введённые буквы.</p>
+          <p>Если слово подсвечено красным, то его нет в базе, либо оно уже было введено ранее. В счёт попыток такое
+            слово не входит.</p>
+        </div>
+        <div class="word word-1 word-active">
+          <div class="char char-1"> </div>
+          <div class="char char-2"> </div>
+          <div class="char char-3"> </div>
+          <div class="char char-4"> </div>
+          <div class="char char-5"> </div>
+        </div>
+        <div class="word word-2">
+          <div class="char char-1"> </div>
+          <div class="char char-2"> </div>
+          <div class="char char-3"> </div>
+          <div class="char char-4"> </div>
+          <div class="char char-5"> </div>
+        </div>
+        <div class="word word-3">
+          <div class="char char-1"> </div>
+          <div class="char char-2"> </div>
+          <div class="char char-3"> </div>
+          <div class="char char-4"> </div>
+          <div class="char char-5"> </div>
+        </div>
+        <div class="word word-4">
+          <div class="char char-1"> </div>
+          <div class="char char-2"> </div>
+          <div class="char char-3"> </div>
+          <div class="char char-4"> </div>
+          <div class="char char-5"> </div>
+        </div>
+        <div class="word word-5">
+          <div class="char char-1"> </div>
+          <div class="char char-2"> </div>
+          <div class="char char-3"> </div>
+          <div class="char char-4"> </div>
+          <div class="char char-5"> </div>
+        </div>
+        <div class="word word-6">
+          <div class="char char-1"> </div>
+          <div class="char char-2"> </div>
+          <div class="char char-3"> </div>
+          <div class="char char-4"> </div>
+          <div class="char char-5"> </div>
+        </div>
       </div>
     </div>
     <div class="keyboard">
