fix: добавлена кнопка перезапуска

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="words-container">
         <div id="info-icon" class="info-icon"><img src="./icons/info.svg" alt="Справка" onclick="infoIconClick()"></div>
         <div class="logo"><img src="./icons/logo.svg" alt="Logo"></div>
-        <div id="flag" class="flag-icon hidden-icon"><img src="./icons/flag.svg" alt="Сдаться" onclick="flagClick()">
+        <div id="flag" class="flag-icon hidden-icon"><img src="./icons/flag.svg" alt="Сдаться" title="Сдаться"
+            onclick="flagClick()">
         </div>
         <div id="info" class="info hidden-info">
           <p>Цель игры - за 6 попыток угадать слово. Буквы могут повторяться, а вместо "ё" везде используется "е".</p>
