feat: изменена логика отображения логотипа

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div id="close-icon" class="close-icon hidden"><img src="./icons/close.svg" alt="Закрыть"
             onclick="closeIconClick()">
         </div>
-        <div class="logo"><img src="./icons/logo.svg" alt="Logo"></div>
-        <div id="flag" class="flag-icon hidden-icon"><img src="./icons/flag.svg" alt="Сдаться" title="Сдаться"
+        <div id="logo" class="logo"><img src="./icons/logo.svg" alt="Logo"></div>
+        <div id="flag" class="flag-icon"><img src="./icons/flag.svg" alt="Сдаться" title="Сдаться"
             onclick="flagClick()">
         </div>
         <div class="word word-1 word-active">
