fix: исправлена видимость

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             onclick="closeIconClick()">
         </div>
         <div id="logo" class="logo"><img src="./icons/logo.svg" alt="Logo"></div>
-        <div id="flag" class="flag-icon"><img src="./icons/flag.svg" alt="Сдаться" title="Сдаться"
+        <div id="flag" class="flag-icon hidden-icon"><img src="./icons/flag.svg" alt="Сдаться" title="Сдаться"
             onclick="flagClick()">
         </div>
         <div class="word word-1 word-active">
