feat: добавлены рофло-слова

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
           <span class="indicator"><img src="./icons/indicatorRed.svg"></span>
           Слово введено неправильно или его нет в базе слов
         </p>
+        <div class="rofl-switcher-container">
+          <div class="rofl-label">Рофло-режим</div>
+          <input type="checkbox" id="switch" onclick="roflSwitch()" /><label for="switch">Toggle</label>
+        </div>
       </div>
     </div>
     <div class="keyboard">
