--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div id="result" class="result hidden">
         <div id="result-icon" class="result-icon"></div>
         <div id="it-was-word"></div>
-        <div id="start-again" onclick='reloadClick()'>Ещё раз</div>
+        <div id="start-again" onclick='reloadClick()'></div>
       </div>
       <div class="letter-row">
         <div id="Key1049" class="letter" onclick='handleTouch("й")'>Й</div>
