--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="color-scheme" content="only light">
+  <!-- <meta name="color-scheme" content="only light"> -->
   <link rel="icon" href="./favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,15 +13,28 @@
   <title>Five</title>
 </head>
 
-<body>
+<body class="light" id="root">
   <div class="content-wrapper">
     <div class="words-wrapper">
       <div class="icons-bg"></div>
       <div class="words-container">
-        <div id="burger-icon" class="burger-icon"><img src="./icons/burger.svg" alt="Меню" onclick="burgerIconClick()">
+        <div id="burger-icon" class="burger-icon" onclick="burgerIconClick()"><svg width="28" height="28"
+            viewBox="0 0 28 28" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M4.66675 7H23.3334" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path d="M4.66675 14H23.3334" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path d="M4.66675 21H23.3334" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
         </div>
-        <div id="close-icon" class="close-icon hidden"><img src="./icons/close.svg" alt="Закрыть"
-            onclick="closeIconClick()">
+        <div id="close-icon" class="close-icon hidden" onclick="closeIconClick()">
+          <svg width="28" height="28" viewBox="0 0 28 28" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20 8L8 20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+              stroke-linejoin="round" />
+            <path d="M8 8L20 20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
         </div>
         <div id="logo" class="logo"><img src="./icons/logo.svg" alt="Logo"></div>
         <div id="flag" class="flag-icon hidden-icon"><img src="./icons/flag.svg" alt="Сдаться" title="Сдаться"
@@ -89,9 +102,15 @@
           <span class="indicator"><img src="./icons/indicatorRed.svg"></span>
           Слово введено неправильно или его нет в базе слов
         </p>
-        <div class="rofl-switcher-container">
-          <div class="rofl-label">Рофло-режим</div>
-          <input type="checkbox" id="switch" onclick="roflSwitch()" /><label for="switch">Toggle</label>
+        <div class="switcher-container">
+          <div class="switcher-label">Оформление</div>
+          <div class="arrow rotate" onclick="themeSwitch()"><img src="./icons/right.svg" alt="Left"></div>
+          <span id="theme-name">Светлая тема</span>
+          <div class="arrow" onclick="themeSwitch()"><img src="./icons/right.svg" alt="Right"></div>
+        </div>
+        <div class="switcher-container">
+          <div class="switcher-label">Рофло-режим</div>
+          <input type="checkbox" id="rofl-switch" onclick="roflSwitch()" /><label for="rofl-switch">Toggle</label>
         </div>
       </div>
     </div>
@@ -139,7 +158,10 @@
         <div id="Key1041" class="letter" onclick='handleTouch("б")'>Б</div>
         <div id="Key1070" class="letter" onclick='handleTouch("ю")'>Ю</div>
         <div id="backspace" class="letter backspace-letter" onclick="handleTouch('', 'Backspace')">
-          <img src="./icons/backspace.svg" alt="Удалить">
+          <svg width="22" height="18" viewBox="0 0 22 18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M18.2168 17.8066L9.87695 17.7969C9.50586 17.7969 9.15755 17.7546 8.83203 17.6699C8.51302 17.5853 8.21029 17.4583 7.92383 17.2891C7.64388 17.1198 7.37695 16.9049 7.12305 16.6445L1.25391 10.6973C0.960938 10.3913 0.746094 10.0951 0.609375 9.80859C0.472656 9.52214 0.404297 9.23242 0.404297 8.93945C0.404297 8.74414 0.433594 8.55208 0.492188 8.36328C0.550781 8.17448 0.641927 7.98568 0.765625 7.79688C0.895833 7.60156 1.05859 7.40299 1.25391 7.20117L7.11328 1.16602C7.36719 0.905599 7.63737 0.700521 7.92383 0.550781C8.21029 0.394531 8.51302 0.287109 8.83203 0.228516C9.15104 0.163411 9.49609 0.130859 9.86719 0.130859H18.2168C19.1738 0.130859 19.8932 0.371745 20.375 0.853516C20.8568 1.32878 21.0977 2.03841 21.0977 2.98242V14.9551C21.0977 15.8991 20.8568 16.6087 20.375 17.084C19.8932 17.5658 19.1738 17.8066 18.2168 17.8066ZM18.1973 16.6055C18.7507 16.6055 19.1706 16.4622 19.457 16.1758C19.75 15.8893 19.8965 15.4629 19.8965 14.8965V3.04102C19.8965 2.47461 19.75 2.04818 19.457 1.76172C19.1706 1.47526 18.7507 1.33203 18.1973 1.33203H9.84766C9.46354 1.33203 9.12826 1.37435 8.8418 1.45898C8.55534 1.53711 8.27865 1.71615 8.01172 1.99609L2.19141 7.99219C1.8724 8.33073 1.71289 8.64648 1.71289 8.93945C1.71289 9.0957 1.74544 9.2487 1.81055 9.39844C1.88216 9.54818 2.00911 9.71419 2.19141 9.89648L8.02148 15.8145C8.28841 16.0879 8.56185 16.2865 8.8418 16.4102C9.12826 16.5404 9.4668 16.6055 9.85742 16.6055H18.1973ZM9.10547 13.002C8.94271 13.002 8.79948 12.9434 8.67578 12.8262C8.55859 12.7025 8.5 12.556 8.5 12.3867C8.5 12.2174 8.56185 12.0742 8.68555 11.957L11.6543 8.97852L8.68555 6C8.56185 5.88281 8.5 5.73958 8.5 5.57031C8.5 5.40104 8.55859 5.26107 8.67578 5.15039C8.79948 5.0332 8.94271 4.97461 9.10547 4.97461C9.28125 4.97461 9.43099 5.03646 9.55469 5.16016L12.5137 8.12891L15.502 5.16016C15.6322 5.02344 15.7754 4.95508 15.9316 4.95508C16.1074 4.95508 16.2539 5.01367 16.3711 5.13086C16.4883 5.24805 16.5469 5.39128 16.5469 5.56055C16.5469 5.72982 16.485 5.8763 16.3613 6L13.3828 8.97852L16.3516 11.9473C16.4753 12.071 16.5371 12.2174 16.5371 12.3867C16.5371 12.556 16.4785 12.7025 16.3613 12.8262C16.2441 12.9434 16.1009 13.002 15.9316 13.002C15.7624 13.002 15.6126 12.9336 15.4824 12.7969L12.5137 9.83789L9.56445 12.7969C9.44076 12.9336 9.28776 13.002 9.10547 13.002Z" />
+          </svg>
         </div>
       </div>
     </div>
