fix: исправлены стили

--- a/index.html
+++ b/index.html
@@ -35,7 +35,20 @@
               stroke-linejoin="round" />
           </svg>
         </div>
-        <div id="logo" class="logo"><img src="./icons/logo.svg" alt="Logo"></div>
+        <div id="logo" class="logo">
+          <svg width="81" height="22" viewBox="0 0 81 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M6.896 21.32C5.168 21.32 3.13067 21.128 0.784 20.744V18.44C3.25867 18.952 5.328 19.208 6.992 19.208C8.29333 19.208 9.24267 19.0267 9.84 18.664C10.4587 18.28 10.768 17.6613 10.768 16.808V12.68C10.768 11.784 10.384 11.208 9.616 10.952C9.25333 10.8453 8.912 10.7813 8.592 10.76C8.29333 10.7173 7.89867 10.696 7.408 10.696H1.264V0.231998H13.232V2.408H4.144V8.712H8.944C9.79733 8.712 10.5547 8.81867 11.216 9.032C11.8773 9.224 12.464 9.56533 12.976 10.056C13.5093 10.5893 13.776 11.2827 13.776 12.136V16.872C13.776 17.6187 13.6373 18.28 13.36 18.856C13.104 19.4107 12.752 19.848 12.304 20.168C11.8987 20.4667 11.376 20.712 10.736 20.904C10.1173 21.096 9.49867 21.2133 8.88 21.256C8.112 21.2987 7.45067 21.32 6.896 21.32ZM19.2505 0.231998H33.5225V2.408H22.3545V9.192H32.4665V11.368H22.3545V21H19.2505V0.231998ZM37.1568 0.231998H40.2608V21H37.1568V0.231998ZM43.4175 0.231998H46.6495L53.3055 18.056H53.5935L60.2495 0.231998H63.3215L55.0655 21H51.4815L43.4175 0.231998ZM66.5005 0.231998H80.4525V2.408H69.6045V9.192H79.3965V11.368H69.6045V18.824H80.7725V21H66.5005V0.231998Z"
+              fill="url(#paint0_linear_64_1417)" />
+            <defs>
+              <linearGradient id="paint0_linear_64_1417" x1="-2" y1="10" x2="83" y2="10" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#7A85E4" />
+                <stop offset="1" stop-color="currentColor" />
+              </linearGradient>
+            </defs>
+          </svg>
+
+        </div>
         <div id="flag" class="flag-icon hidden-icon"><img src="./icons/flag.svg" alt="Сдаться" title="Сдаться"
             onclick="flagClick()">
         </div>
