fix: исправлен цвет стрелок при переключении темы

--- a/index.html
+++ b/index.html
@@ -116,9 +116,17 @@
         </p>
         <div class="switcher-container">
           <div class="switcher-label">Оформление</div>
-          <div class="arrow rotate" onclick="themeSwitch()"><img src="./icons/right.svg" alt="Left"></div>
+          <div class="arrow rotate" onclick="themeSwitch()">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 18L15 12L9 6" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
           <span id="theme-name">Светлая тема</span>
-          <div class="arrow" onclick="themeSwitch()"><img src="./icons/right.svg" alt="Right"></div>
+          <div class="arrow" onclick="themeSwitch()">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 18L15 12L9 6" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
         </div>
         <div class="switcher-container">
           <div class="switcher-label">Рофло-режим</div>
